# MLP_Template

./: .gitignore  26_10.sln  26_10.vcxproj  26_10.vcxproj.filters  CMakeLists.txt  MLP.sln  MLP.vcxproj  MLP.vcxproj.filters  MLP_Template.sln  README.md  build_project.sh  build_project_linux.sh  build_project_windows.bat  exp.sln  experimentalnet.cpp  neuralnetwork.cpp  nnet.sln  nnet.vcxproj  nnet.vcxproj.filters  random_index_generator.cpp  template_neuralnet.hpp  updated_mlp.sln  updated_mlp.vcxproj  utils.h  utils.hpp  vanilla_MLP.sln  vanilla_MLP.vcxproj  vanilla_MLP.vcxproj.filters
crossplatform/updated_mlp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  updated_mlp.lastbuildstate
include/: data_generator.hpp  multiclass.hpp  neural_network_multiclass.h  neural_network_updated.hpp  random_index_generator.hpp  random_uniform_generator.hpp  template_neuralnet.hpp  utils.h  utils.hpp
src/: data_generator.cpp  experimentalnet.cpp  main.cpp  neural_network_binary.cpp  neural_network_multiclass.cpp  neural_network_updated.cpp  neuralnetwork.cpp  random_index_generator.cpp  random_uniform_generator.cpp
